--- a/utils/fork-tree/Cargo.toml
+++ b/utils/fork-tree/Cargo.toml
@@ -15,3 +15,10 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
+sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
+
+[features]
+default = ["std"]
+std = [
+	"sp-runtime/std",
+]
