--- a/client/finality-grandpa/Cargo.toml
+++ b/client/finality-grandpa/Cargo.toml
@@ -44,7 +44,7 @@ sc-network-gossip = { version = "0.9.0", path = "../network-gossip" }
 sp-finality-grandpa = { version = "3.0.0", path = "../../primitives/finality-grandpa" }
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.9.0"}
 sc-block-builder = { version = "0.9.0", path = "../block-builder" }
-finality-grandpa = { git = "https://github.com/imstar15/finality-grandpa", branch = "v0.14.0", features = ["derive-codec"] }
+finality-grandpa = { path = "../../finality-grandpa", features = ["derive-codec"] }
 pin-project = "1.0.4"
 linked-hash-map = "0.5.2"
 async-trait = "0.1.42"
@@ -52,7 +52,7 @@ backtrace = "0.3.61"
 
 [dev-dependencies]
 assert_matches = "1.3.0"
-finality-grandpa = { git = "https://github.com/imstar15/finality-grandpa", branch = "v0.14.0", features = ["derive-codec", "test-helpers"] }
+finality-grandpa = { path = "../../finality-grandpa", features = ["derive-codec", "test-helpers"] }
 sc-network = { version = "0.9.0", path = "../network" }
 sc-network-test = { version = "0.8.0", path = "../network/test" }
 sp-keyring = { version = "3.0.0", path = "../../primitives/keyring" }
