--- a/bin/node-template/pallets/template/Cargo.toml
+++ b/bin/node-template/pallets/template/Cargo.toml
@@ -18,6 +18,8 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 frame-support = { default-features = false, version = "4.0.0-dev", path = "../../../../frame/support" }
 frame-system = { default-features = false,  version = "4.0.0-dev",  path = "../../../../frame/system" }
 frame-benchmarking = { default-features = false,  version = "4.0.0-dev",  path = "../../../../frame/benchmarking", optional = true }
+log = { version = "0.4.14", default-features = false }
+sp-runtime = { default-features = false, version = "4.0.0-dev", path = "../../../../primitives/runtime" }
 
 [dev-dependencies]
 serde = { version = "1.0.126" }
@@ -32,6 +34,7 @@ std = [
 	'frame-support/std',
 	'frame-system/std',
 	'frame-benchmarking/std',
+	"log/std",
 ]
 
 runtime-benchmarks = ["frame-benchmarking"]
