--- a/client/finality-grandpa/Cargo.toml
+++ b/client/finality-grandpa/Cargo.toml
@@ -49,6 +49,7 @@ pin-project = "1.0.4"
 linked-hash-map = "0.5.4"
 async-trait = "0.1.50"
 wasm-timer = "0.2"
+backtrace = "0.3.63"
 
 [dev-dependencies]
 assert_matches = "1.3.0"
