--- a/primitives/consensus/babe/Cargo.toml
+++ b/primitives/consensus/babe/Cargo.toml
@@ -28,6 +28,7 @@ sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../ru
 sp-timestamp = { version = "4.0.0-dev", path = "../../timestamp", optional = true }
 serde = { version = "1.0.126", features = ["derive"], optional = true }
 async-trait = { version = "0.1.50", optional = true }
+log = { version = "0.4.14", default-features = false }
 
 [features]
 default = ["std"]
