--- a/primitives/finality-grandpa/Cargo.toml
+++ b/primitives/finality-grandpa/Cargo.toml
@@ -17,7 +17,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 grandpa = { package = "finality-grandpa", version = "0.14.1", default-features = false, features = ["derive-codec"] }
-log = { version = "0.4.8", optional = true }
+# log = { version = "0.4.8", optional = true }
+log = { version = "0.4.14", default-features = false }
 serde = { version = "1.0.126", optional = true, features = ["derive"] }
 sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
 sp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "../application-crypto" }
@@ -29,7 +30,8 @@ sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
 [features]
 default = ["std"]
 std = [
-	"log",
+#	"log",
+	"log/std",
 	"serde",
 	"codec/std",
 	"grandpa/std",
