--- a/primitives/authority-discovery/Cargo.toml
+++ b/primitives/authority-discovery/Cargo.toml
@@ -18,6 +18,7 @@ codec = { package = "parity-scale-codec", default-features = false, version = "2
 sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
 sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
 sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../runtime" }
+log = { version = "0.4.14", default-features = false }
 
 [features]
 default = ["std"]
