--- a/primitives/application-crypto/Cargo.toml
+++ b/primitives/application-crypto/Cargo.toml
@@ -20,6 +20,7 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 serde = { version = "1.0.126", optional = true, features = ["derive"] }
 sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
 sp-io = { version = "4.0.0-dev", default-features = false, path = "../io" }
+log = { version = "0.4.14", default-features = false }
 
 [features]
 default = [ "std" ]
@@ -30,6 +31,7 @@ std = [
 	"serde",
 	"sp-std/std",
 	"sp-io/std",
+	"log/std",
 ]
 
 # This feature enables all crypto primitives for `no_std` builds like microcontrollers
