--- a/client/finality-grandpa/Cargo.toml
+++ b/client/finality-grandpa/Cargo.toml
@@ -44,7 +44,7 @@ sc-network-gossip = { version = "0.10.0-dev", path = "../network-gossip" }
 sp-finality-grandpa = { version = "4.0.0-dev", path = "../../primitives/finality-grandpa" }
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.9.0"}
 sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" }
-finality-grandpa = { version = "0.14.1", features = ["derive-codec"] }
+finality-grandpa = { version = "0.14.1", features = ["derive-codec"], git = "https://github.com/imstar15/finality-grandpa.git", branch = "debug-910" }
 pin-project = "1.0.4"
 linked-hash-map = "0.5.4"
 async-trait = "0.1.50"
@@ -52,7 +52,7 @@ wasm-timer = "0.2"
 
 [dev-dependencies]
 assert_matches = "1.3.0"
-finality-grandpa = { version = "0.14.1", features = ["derive-codec", "test-helpers"] }
+finality-grandpa = { version = "0.14.1", features = ["derive-codec", "test-helpers"], git = "https://github.com/imstar15/finality-grandpa.git", branch = "debug-910" }
 sc-network = { version = "0.10.0-dev", path = "../network" }
 sc-network-test = { version = "0.8.0", path = "../network/test" }
 sp-keyring = { version = "4.0.0-dev", path = "../../primitives/keyring" }
