--- a/primitives/utils/Cargo.toml
+++ b/primitives/utils/Cargo.toml
@@ -15,6 +15,7 @@ futures-core = "0.3.4"
 lazy_static = "1.4.0"
 prometheus = { version = "0.11.0", default-features = false }
 futures-timer = "3.0.2"
+log = "0.4.8"
 
 [features]
 default = ["metered"]
