--- a/client/keystore/Cargo.toml
+++ b/client/keystore/Cargo.toml
@@ -28,6 +28,13 @@ parking_lot = "0.11.1"
 rand = "0.7.2"
 serde_json = "1.0.41"
 subtle = "2.1.1"
+log = { version = "0.4.14", default-features = false }
 
 [dev-dependencies]
 tempfile = "3.1.0"
+
+[features]
+default = ["std"]
+std = [
+	"log/std",
+]
