--- a/primitives/keystore/Cargo.toml
+++ b/primitives/keystore/Cargo.toml
@@ -23,6 +23,7 @@ parking_lot = { version = "0.11.1", default-features = false }
 serde = { version = "1.0", optional = true}
 sp-core = { version = "4.0.0-dev", path = "../core" }
 sp-externalities = { version = "0.10.0-dev", path = "../externalities", default-features = false }
+log = { version = "0.4.14", default-features = false }
 
 [dev-dependencies]
 rand = "0.7.2"
@@ -34,4 +35,5 @@ default = ["std"]
 std = [
 	"serde",
 	"schnorrkel/std",
+	"log/std",
 ]
