--- a/client/light/Cargo.toml
+++ b/client/light/Cargo.toml
@@ -23,6 +23,7 @@ sc-client-api = { version = "4.0.0-dev", path = "../api" }
 sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
 codec = { package = "parity-scale-codec", version = "2.0.0" }
 sc-executor = { version = "0.10.0-dev", path = "../executor" }
+log = { version = "0.4.8" }
 
 [features]
 default = []
