--- a/frame/executive/Cargo.toml
+++ b/frame/executive/Cargo.toml
@@ -21,6 +21,7 @@ sp-tracing = { version = "4.0.0-dev", default-features = false, path = "../../pr
 sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
 sp-io = { version = "4.0.0-dev", default-features = false, path = "../../primitives/io" }
 sp-core = { version = "4.0.0-dev", default-features = false, path = "../../primitives/core" }
+log = { version = "0.4.14", default-features = false }
 
 [dev-dependencies]
 hex-literal = "0.3.1"
@@ -45,5 +46,6 @@ std = [
 	"sp-runtime/std",
 	"sp-tracing/std",
 	"sp-std/std",
+	"log/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
